fix docker container